# starTrack-be

./: .env  .gitignore  README.md  starTrack-be.cabal  startrack.sql
app/: Auth.hs  ChapterTrack.hs  Db.hs  EpisodeTrack.hs  JWT.hs  Main.hs  Response.hs  Series.hs  SeriesChapter.hs  SeriesEpisode.hs  SeriesTrack.hs  Utils.hs
app/Database/: Chapter.hs  Db.hs  Episode.hs  Series.hs  User.hs  UserChapter.hs  UserEpisode.hs  UserSeries.hs
