cabal-version:      2.4
name:               starTrack-be
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Bonaventura Galang

-- A copyright notice.
-- copyright:
-- category:

executable starTrack-be
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Auth
      JWT
      Series
      SeriesTrack
      Utils
      Database.Db
      Database.User
      Database.Series
      Database.UserSeries

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      base ^>=4.16.4.0,
      happstack-server >= 7.7 && < 8,
      aeson >= 2.0 && < 3,
      postgresql-simple >= 0.7,
      bytestring >= 0.11.3.1,
      text >= 1.2.5.0,
      password >= 3.0.2.1,
      jwt >= 0.11.0,
      containers >= 0.6.5.1,
      dotenv >= 0.11.0.2,
      transformers
    hs-source-dirs:
      app
    default-language: Haskell2010
